<resources>
    <string name="app_name">H Plus</string>
    <string name="cancel">Cancel</string>
    <string name="notice">Notice</string>
    <string name="version">H Plus</string>
    <string name="ok">OK</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="retry">Retry</string>
    <string name="no_data">No data available</string>
    <string name="no_network">We are having trouble reaching to internet, please ensure if your smart phone connects to a valid Wi-Fi.</string>
    <string name="wapi_router_security_open">Open</string>
    <string name="wapi_router_security_wep">WEP</string>
    <string name="wapi_router_security_wpa_aes">WPA AES</string>
    <string name="wapi_router_security_wpa_tkip">WPA TKIP</string>
    <string name="wapi_router_security_wpa2_aes">WPA2 AES</string>
    <string name="wapi_router_security_wpa2_tkip">WPA2 TKIP</string>
    <string name="wapi_router_security_wpa2_mixed">WPA2 Mixed</string>
    <string name="enroll_skip">Cancel</string>
    <string name="enroll_one">1</string>
    <string name="enroll_two">2</string>
    <string name="enroll_three">3</string>
    <string name="enroll_four">4</string>
    <string name="enroll_title1">Find your device</string>
    <string name="enroll_title2">Connect to your device</string>
    <string name="enroll_title3">Connect your device to\nhome Wi-Fi</string>
    <string name="enroll_title4">Name your device</string>
    <string name="enroll_scanning">Scanning</string>
    <string name="enroll_not_found">Air Touch not found.</string>
    <string name="enroll_found">Your device has been found</string>
    <string name="enroll_connecting">Connecting</string>
    <string name="enroll_home_wifi">home WIFI</string>
    <string name="enroll_open_wifi">Please ensure if your smart phone enables Wi-Fi.</string>
    <string name="enroll_networks">Available networks</string>
    <string name="enroll_back">Back</string>
    <string name="enroll_next">Next</string>
    <string name="enroll_rescan">Rescan</string>
    <string name="enroll_password">Password</string>
    <string name="enroll_hint_ssid">Enter network name</string>
    <string name="enroll_hint_password">Enter password</string>
    <string name="enroll_ssid_security">Security</string>
    <string name="enroll_ssid">SSID</string>
    <string name="enroll_other_network">Other network</string>
    <string name="enroll_done">Done</string>
    <string name="enroll_other">Other&#8230;</string>
    <string name="enroll_error">Operation failed! Please try again.</string>
    <string name="enroll_wait">Please wait while we\'re adding your device. This may take about one minute.</string>
    <string name="enroll_success">Connection succeeded.</string>
    <string name="email_format_wrong">Email format is wrong</string>
    <string name="enroll_quit">Do you want to cancel adding device?</string>
    <string name="quit">Do you want to quit?</string>
    <string name="enroll_indicate">Press and hold \nWiFi button until hear a chime</string>
    <string name="not_login">You need to login first before adding device. Login now?</string>
    <string name="error_code_10">"Invalid Wi-Fi password input for last enrollment. Please ensure you input a correct password.</string>
    <string name="error_code_20">"The Wi-Fi name you entered last time cannot be found. Make sure to enter a right Wi-Fi name.</string>
    <string name="error_code_30">"The Wi-Fi name you entered last time cannot be found. Make sure to enter a right Wi-Fi name.</string>
    <string name="enroll_long_press">Press and Hold</string>
    <string name="enroll_page0_title_line1_1">Select</string>
    <string name="enroll_page0_title_line1_2">the product</string>
    <string name="enroll_page0_title_line2">you want to add</string>
    <string name="enroll_page1_title_line1"> </string>
    <string name="enroll_page1_title_line2">WiFi button until hear a chime</string>
    <string name="enroll_page2_title_line1">Find one</string>
    <string name="enroll_page2_title_line2">Air Touch-S</string>
    <string name="enroll_page2_title_line3">Name your device</string>
    <string name="enroll_page2_title_line4">Home Location</string>
    <string name="enroll_page2_title_line5">Name your home</string>
    <string name="enroll_page3_title_line1">Connect Air Touch to</string>
    <string name="enroll_page3_title_line2">Home WiFi</string>
    <string name="enroll_password_title1"> </string>
    <string name="enroll_password_title2">\'s password</string>
    <string name="enroll_name_done">Done</string>
    <string name="enroll_selected">Selected</string>
    <string name="login_email">Email</string>
    <string name="login_forget_password">Forgot password?</string>
    <string name="login_remember_password">Remember password</string>
    <string name="login_new_user">New user</string>
    <string name="login">Login</string>
    <string name="log_in">Login</string>
    <string name="log_out">Logout</string>
    <string name="log_in_reg">Login/Register</string>
    <string name="register">Register</string>
    <string name="registering">Register</string>
    <string name="register_email">Email (User Account)</string>
    <string name="register_accept_terms">I have read and agreed the terms</string>
    <string name="register_nick_name">Nickname</string>
    <string name="register_confirm_password">Confirm password</string>
    <string name="register_password_guide">Password shall contain 6-30 characters include letters or digits.</string>
    <string name="password_format_wrong">Password format error!</string>
    <string name="login_password_invalid">Login failed! Invalid mobile number or password!</string>
    <string name="change_password_invalid">Failed to change password! Invalid old password.</string>
    <string name="password_not_match">Password does not match</string>
    <string name="password_length_wrong">Password is too short! It must be at least 6 characters.</string>
    <string name="nickname_format_wrong">Invalid nickname! Cannot use special characters and length must be less than 40 characters.</string>
    <string name="my_places">My home(s)</string>
    <string name="set_as_default">Set this home as default</string>
    <string name="remove_this_home">Remove</string>
    <string name="rename_this_home">Rename this home</string>
    <string name="renaming">Renaming</string>
    <string name="remove_home_fail">Oops! Cannot delete a home with devices enrolled. Please delete devices first to proceed.</string>
    <string name="add_place">Add home</string>
    <string name="add_to_home">Add to homes</string>
    <string name="search_place">Search home location</string>
    <string name="name_place">Name your home</string>
    <string name="home_name_empty">Please input correct home name.</string>
    <string name="city_not_found">This city cannot be found!</string>
    <string name="enroll_fail_msg">Oops! An error occurred when adding device! Please replug power cord and try
        again.</string>
    <string name="enroll_gps">Location</string>
    <string name="enroll_gps_on">Locating</string>
    <string name="enroll_gps_fail">Not yet located</string>
    <string name="enroll_select_city">Please select a location</string>
    <string name="enroll_home">Name your home</string>
    <string name="enroll_device">Name your device</string>
    <string name="my_home">My home</string>
    <string name="my_device">Bedroom’s air purifier</string>
    <string name="enroll_select">Select</string>
    <string name="enroll_loading">Loading</string>
    <string name="adding_home">Adding home</string>
    <string name="deleting_home">Deleting home</string>
    <string name="adding_device">Adding device</string>
    <string name="checking_device">Checking device</string>
    <string name="add_device">Add device</string>
    <string name="add_device_fail">Failed to add device!</string>
    <string name="delete_device_success">Device is successfully deleted!</string>
    <string name="delete_device_fail">Failed to delete device!</string>
    <string name="device_not_alive">The device is not connected to internet.This operation will not succeed. Please exit and try to add device again. At that time, you would receive error log why operation failed last time.</string>
    <string name="device_not_control">Remote control has been disabled!</string>
    <string name="device_not_on">Turn on device first!</string>
    <string name="select_location">Select location</string>
    <string name="search">Search&#8230;</string>
    <string name="gps">Location:</string>
    <string name="reconnect">Reconnect</string>
    <string name="select_city">Please select location first.</string>
    <string name="max_home">You have reached the limit number of home, please select a home that already exists.</string>
    <string name="max_home2">You\'ve already reached the maximum number of homes!</string>
    <string name="same_home">This name has been used! Please use another one.</string>
    <string name="max_device">You have reached the maximum number of devices!</string>
    <string name="device_already_registered">"The device has been registered by you. Please click \"Continue\" to change home Wi-Fi password. Click \"No\" to return home page to check device status."</string>
    <string name="device_already_registered_by_another">The device is already registered!</string>
    <string name="device_registered">The device is already registered.</string>
    <string name="network_retry">Cannot access to internet! Please connect to working Wi-Fi or cellular network.</string>
    <string name="control_auto">Auto</string>
    <string name="control_quick">Quick</string>
    <string name="control_silent">Quiet</string>
    <string name="control_manual">Manual</string>
    <string name="control_sleep">Sleep</string>
    <string name="device_offline">Device is offline.</string>
    <string name="device_control">Connecting device... Please wait.</string>
    <string name="input_quick">Please slow down. Control is too frequent!</string>
    <string name="emotional_enroll_now_str">"Enroll Now"</string>
    <string name="india_no_log_reminder1">Please enroll a device to enjoy</string>
    <string name="india_no_log_reminder2">our customized service.</string>
    <string name="weather_aqi">AQI</string>
    <string name="weather_pm25">PM2.5</string>
    <string name="weather_default">Thunderstorms</string>
    <string name="weather_default_aqi">50</string>
    <string name="weather_default_pm25">30</string>
    <string name="weather_default_temperature">20&#8211;34°C</string>
    <string name="ontravel_reminder_text_content1">"It seems you are on travel!"</string>
    <string name="ontravel_reminder_text_content2">"Would you like to check the weather and air quality of current location?"</string>
    <string name="ontravel_yes">Yes</string>
    <string name="ontravel_no">No</string>
    <string name="gps_fail_content1">Oops!</string>
    <string name="gps_fail_content2">Locating failed!</string>
    <string name="gps_fail_refresh">Refresh</string>
    <string name="gps_fail_manualadd">Add Home</string>
    <string name="connect_timeout_title1">Connection Timeout</string>
    <string name="connect_timeout_content1">You can try solutions as below or call Customer Care directly.</string>
    <string name="connect_timeout_content3">1. You may entered a wrong password. Please tap Retry button in the bottom to enter password again.</string>
    <string name="connect_timeout_content4">2. Please check if the blue button in the picture below is light up. If not, please press and hold the button for 3 seconds until hear a chime, and then retry.</string>
    <string name="connect_timeout_content5">"3. You can also use AP mode to enrol your device"</string>
    <string name="connect_timeout_retry">Retry</string>
    <string name="connect_timeout_contact">Customer Care</string>
</resources>