<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id = "@+id/top_fragment_view"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/transparent">


    <com.honeywell.hch.airtouchv3.app.dashboard.controller.location.BlurBackgroundView
        android:id="@+id/home_background"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent" />

    <RelativeLayout
        android:id="@+id/gps_success"
        android:visibility="gone"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <include
            android:id="@+id/city_title_id"
            layout="@layout/city_title" />

        <include
            android:id="@+id/four_btn_layout"
            layout="@layout/imagebtn_title_below"
            android:layout_marginTop="35dip"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/city_title_id"
            android:layout_centerHorizontal="true"/>

        <com.honeywell.hch.airtouchv3.app.airtouch.view.weatherchart.WeatherChartView
            android:id="@+id/weather_chart"
            android:layout_below="@id/four_btn_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_marginBottom="60dp"/>

    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/gps_not_success"
        android:visibility="gone"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <RelativeLayout
            android:id="@+id/reminder_id"
            android:layout_width="260dip"
            android:layout_height="360dip"
            android:layout_centerHorizontal="true"
            android:layout_centerInParent="true"
            android:layout_centerVertical="true">

            <TextView
                android:id="@+id/title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_marginTop="50dip"
                android:textColor="@color/white"
                android:text="@string/gps_fail_content1"
                android:textSize="30sp" />

            <TextView
                android:id="@+id/content1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_below="@id/title"
                android:layout_marginTop="60dip"
                android:textColor="@color/white_85"
                android:text="@string/gps_fail_content2"
                android:textSize="20sp"
                android:textStyle="bold" />

        </RelativeLayout>

        <LinearLayout
            android:id="@+id/okyes_layout"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="60dip"
            android:orientation="horizontal"
            >

            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1">

                <TextView
                    android:id="@+id/refresh_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerHorizontal="true"
                    android:layout_centerInParent="true"
                    android:layout_centerVertical="true"
                    android:gravity="center"
                    android:text="@string/gps_fail_refresh"
                    android:textColor="@color/white"
                    android:textSize="30sp"
                    android:textStyle="bold" />
            </RelativeLayout>

            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1">

                <TextView
                    android:id="@+id/manual_add_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerHorizontal="true"
                    android:layout_centerInParent="true"
                    android:layout_centerVertical="true"
                    android:gravity="center"
                    android:text="@string/gps_fail_manualadd"
                    android:textColor="@color/white"
                    android:textSize="30sp"
                    android:textStyle="bold" />
            </RelativeLayout>

        </LinearLayout>

    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/india_gps_not_success"
        android:visibility="gone"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:orientation="vertical"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:background="@drawable/india_no_gps_bg">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="40dp"
                android:layout_marginBottom="10dp"
                android:layout_gravity="center_horizontal"
                android:textSize="18sp"
                android:textColor="@color/white"
                android:text="@string/india_no_log_reminder1"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="30dp"
                android:layout_gravity="center_horizontal"
                android:textSize="18sp"
                android:textColor="@color/white"
                android:text="@string/india_no_log_reminder2"/>

            <Button
                android:id="@+id/india_enroll_btn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="30dp"
                android:padding="5dp"
                android:layout_gravity="center_horizontal"
                android:textSize="18sp"
                android:textColor="@color/white"
                android:text="@string/emotional_enroll_now_str"
                android:background="@drawable/india_enroll_now_button"/>


        </LinearLayout>

    </RelativeLayout>



</RelativeLayout>